--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "httpie-mauth"
-version = "0.0.3"
+version = "0.0.4"
 description = "MAuth plugin for HTTPie"
-authors = ["Mason Gup <mason.gup@3ds.com>"]
+authors = ["Mason Gup <masongup@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "httpie_mauth.py"}]
-repository = "https://github.com/masongup-mdsol/httpie-mauth"
+repository = "https://github.com/masongup/httpie-mauth"
 classifiers = [
     'Environment :: Web Environment',
     'Intended Audience :: Developers',
